# cubix

./: .gitignore  Plotter.py  README.md  pyproject.toml  requirements.txt  setup.py
cubix/: __init__.py  __main__.py  clouds.py  playground.py  utils.py
src/cubix/: __main__.py  clouds.py  playground.py  utils.py
tex/: book.toc  memoria.aux  memoria.dvi  memoria.tex  memoria.toc
tex/ggb/: 2clouds1.ggb  2clouds2.ggb  borde.ggb  cech.ggb  cloud.ggb  cubos.ggb  cubos3d.ggb  triangulacioncuadrado.ggb  triangulacioncubo.ggb  vietorisrips.ggb
