[project]
name = "cubix"
version = "1.1.2"
description = "Persistent homology using KDE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.14.1",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9.3",
]
gui = [
    "matplotlib>=3.9.3",
    "pyqt5>=5.15.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"